/*
Execute generate code from this protofile with the following command line:
protoc --go_out=./generated --go_opt=paths=source_relative --go-grpc_out=./generated --go-grpc_opt=paths=source_relative adapters/bin.proto
*/
syntax = "proto3";
package binManager;

option go_package = "/binManager";

message Params {}

message NewBinResponse {
  string binId = 1;
};

message HttpRequestDetails {
  string binId = 1;
  string httpRequestContents = 2;
}

message LogRequestResponse {}

service BinManager {
  rpc GenerateNewBin(Params) returns (NewBinResponse) {}
  rpc LogRequestToBin(HttpRequestDetails) returns (LogRequestResponse) {}
};